--- a/diary/Makefile
+++ b/diary/Makefile
@@ -1,6 +1,7 @@
-html: diary.csv make_table.py
+diary.html: diary.csv make_table.py
 	python make_table.py diary.csv -o diary.html
 
+.PHONY: view
 view:
-	make html
+	make diary.html
 	firefox diary.html
