added sources to .bib file and changed name to 'sources'

--- a/dissertation/Makefile
+++ b/dissertation/Makefile
@@ -2,6 +2,8 @@
 open: dissertation.pdf
 	gnome-open dissertation.pdf
 
-dissertation.pdf: dissertation.tex dissertation.bib
+dissertation.pdf: dissertation.tex sources.bib
 	pdflatex dissertation.tex
+	pdflatex dissertation.tex
+	bibtex dissertation
 	pdflatex dissertation.tex
