added more sources, hadamard program and harvard citations

--- a/dissertation/Makefile
+++ b/dissertation/Makefile
@@ -2,12 +2,19 @@
 open: dissertation.pdf
 	gnome-open dissertation.pdf
 
+.PHONY: clean
+clean:
+	touch *.tex *.bib
+	rm *.aux *.bbl
+
 .PHONY: source_open
 source_open: sources.pdf
 	gnome-open sources.pdf
 
-dissertation.pdf: dissertation.tex sources.bib
+dissertation.pdf: dissertation.tex sources.bib $(wildcard ../src/*.py)
 	pdflatex dissertation.tex
+	pdflatex dissertation.tex
+	bibtex dissertation
 	pdflatex dissertation.tex
 	bibtex dissertation
 	pdflatex dissertation.tex
@@ -17,4 +24,5 @@ sources.pdf: sources.tex sources.bib
 	pdflatex sources.tex
 	bibtex sources
 	pdflatex sources.tex
-    
+	bibtex sources
+	pdflatex sources.tex
