moved tex files into central directory and changed diary to a tex file

--- a/texfiles/Makefile
+++ b/texfiles/Makefile
@@ -1,15 +1,19 @@
-.PHONY: open
-open: dissertation.pdf
+.PHONY: dissertation_open
+open: dissertation.pdf clean
 	gnome-open dissertation.pdf
+
+.PHONY: source_open
+source_open: sources.pdf clean
+	gnome-open sources.pdf
+
+.PHONY: diary_open
+diary_open: diary.pdf clean
+	gnome-open diary.pdf
 
 .PHONY: clean
 clean:
 	touch *.tex *.bib
-	rm *.aux *.bbl
-
-.PHONY: source_open
-source_open: sources.pdf
-	gnome-open sources.pdf
+	rm -f *.aux *.log *.toc *.bbl *.blg *.dvi *.lol *.out *.lof
 
 dissertation.pdf: dissertation.tex sources.bib $(wildcard ../src/*.py)
 	pdflatex dissertation.tex
@@ -26,3 +30,8 @@ sources.pdf: sources.tex sources.bib
 	pdflatex sources.tex
 	bibtex sources
 	pdflatex sources.tex
+
+diary.pdf: diary.tex
+	pdflatex diary.tex
+	pdflatex diary.tex
+	pdflatex diary.tex
