--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.py[co]
 *.pyc
 __pycache__/**
+**/_minted*/**
 bin
 *.aux
 *.log
@@ -10,8 +11,9 @@ bin
 *.blg
 *.dvi
 *.lol
-*.out
 *.lof
+*.lot
+*.out
 *.fdb_latexmk
 *.fls
 *.gz
